@@ -1,0 +1,4 @@
+conductive
+mobile
+noDropShadow
+forceUnderShadows
